--- a/styleoo.css
+++ b/styleoo.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "Times New Roman", serif;
+  font-family: "Khalid", serif;
   background-color: #f1f1f1;
   min-height: 100vh;
   display: flex;
@@ -80,6 +80,10 @@ button[type=button]:hover {
   font-size: 16px;
 }
 
+@font-face {
+  font-family: "Khalid";
+  src: url("https://raw.githubusercontent.com/zezokam/Arabic-labor/main/Fonts/Khalid.ttf") format("truetype");
+}
 
 footer {
   background-color: #333;
@@ -93,7 +97,6 @@ footer {
 footer p {
   margin-bottom: 5px;
 }
-
 
 @media only screen and (max-width: 600px) {
   form {
