--- a/styleoo.css
+++ b/styleoo.css
@@ -89,14 +89,27 @@ footer {
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   width: 100%;
   margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 footer p {
-  margin-bottom: 5px;
+  margin: 5px 0;
 }
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 
 @media only screen and (max-width: 600px) {
   form {
