--- a/styleoo.css
+++ b/styleoo.css
@@ -85,6 +85,16 @@ button[type=button]:hover {
   src: url("https://raw.githubusercontent.com/zezokam/Arabic-labor/main/Fonts/Khalid.ttf") format("truetype");
 }
 
+footer {
+  background-color: #222;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
 
 
 @media only screen and (max-width: 600px) {
