--- a/styleoo.css
+++ b/styleoo.css
@@ -88,6 +88,18 @@ button[type=button]:hover {
   src: url("https://raw.githubusercontent.com/zezokam/Arabic-labor/main/Fonts/Khalid.ttf") format("truetype");
 }
 
+footer {
+  width: 100%;
+  background-color: #f1f1f1;
+  padding: 20px 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+
+footer p {
+  margin: 0;
+}
 
 @media only screen and (max-width: 600px) {
   form {
