--- a/styleoo.css
+++ b/styleoo.css
@@ -95,11 +95,15 @@ footer {
   text-align: center;
   position: absolute;
   bottom: 0;
+  margin-top: 20px;
+  font-size: 10px;
+  color: white;
 }
 
 footer p {
   margin: 0;
 }
+
 
 @media only screen and (max-width: 600px) {
   form {
