--- a/styleoo.css
+++ b/styleoo.css
@@ -16,15 +16,14 @@ body {
 .container {
   width: 80%;
   margin-top: 40px;
-  margin-bottom: calc(100px + 20px); /* Add margin equal to height of footer */
-  min-height: calc(100vh - 100px);
+  margin-bottom: calc(100px + 40px); /* Add margin equal to height of footer */
+  min-height: calc(100vh - 160px); /* Adjust min-height to account for margin and footer height */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-    text-align: center;
+  text-align: center;
 }
-
 
 h1 {
   text-align: center;
@@ -90,20 +89,19 @@ button[type=button]:hover {
 
 footer {
   width: 100%;
-  background-color: #f1f1f1;
+  background-color: gray;
   padding: 20px 0;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  margin-top: 20px;
-  font-size: 10px;
+  position: relative; /* Set position to relative to allow for proper spacing */
+  margin-top: 40px; /* Increase margin to allow for proper spacing */
+  font-size: 12px; /* Decrease font size for smaller text */
   color: white;
+  clear: both; /* Add clear to ensure proper spacing and prevent overlap */
 }
 
 footer p {
   margin: 0;
 }
-
 
 @media only screen and (max-width: 600px) {
   form {
