--- a/styleoo.css
+++ b/styleoo.css
@@ -94,7 +94,7 @@ button[type=button]:hover {
 
 footer {
   width: 100%;
-  background-color: #f1f1f1;
+  background-color: #616060;
   padding: 20px 0;
   text-align: center;
   position: absolute;
