--- a/styleoo.css
+++ b/styleoo.css
@@ -92,14 +92,14 @@ button[type=button]:hover {
   src: url("https://raw.githubusercontent.com/zezokam/Arabic-labor/main/Fonts/Khalid.ttf") format("truetype");
 }
 
-footer {
+ffooter {
   width: 100%;
   background-color: #616060;
   padding: 20px 0;
   text-align: center;
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  margin-top: 20px;
+  left: 0;
   font-size: 10px;
   color: white;
 }
