--- a/styleoo.css
+++ b/styleoo.css
@@ -71,6 +71,7 @@ button[type=button]:hover {
 
 #result {
   margin-top: 20px;
+  margin-bottom: 20px;
   display: none;
   text-align: center;
   border: 1px solid #ccc;
