--- a/styleoo.css
+++ b/styleoo.css
@@ -10,7 +10,10 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 
 .container {
   width: 80%;
