--- a/styleoo.css
+++ b/styleoo.css
@@ -15,13 +15,13 @@ body {
 .container {
   width: 80%;
   margin-top: 40px;
-  margin-bottom: 80px;
-  min-height: calc(100vh - 180px);
+  min-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding-bottom: 50px; /* Added padding */
 }
 
 h1 {
