--- a/styleoo.css
+++ b/styleoo.css
@@ -73,7 +73,7 @@ button[type=button]:hover {
 #result {
   margin-top: 20px;
   margin-bottom: 20px;
-  display: none;
+  display: 0;
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 4px;
