--- a/styleoo.css
+++ b/styleoo.css
@@ -21,7 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-bottom: 50px; /* Added padding */
+  margin-bottom: 80px; /* Add margin to match footer height */
 }
 
 h1 {
