--- a/styleoo.css
+++ b/styleoo.css
@@ -10,24 +10,20 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
 }
 
 .container {
   width: 80%;
-  margin-top: 40px;
   min-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* New rules for centering */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
-
 
 h1 {
   text-align: center;
@@ -78,7 +74,7 @@ button[type=button]:hover {
 #result {
   margin-top: 20px;
   margin-bottom: 20px;
-  display: 0;
+  display: none;
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 4px;
