--- a/styleoo.css
+++ b/styleoo.css
@@ -74,7 +74,7 @@ button[type=button]:hover {
 #result {
   margin-top: 20px;
   margin-bottom: 20px;
-  display: none;
+  display: 0;
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -100,13 +100,14 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
+  right: 0;
   font-size: 10px;
   color: white;
 }
 
 footer p {
   margin: 0;
-  padding: 20px 0;
+  padding: 0;
 }
 
 @media only screen and (max-width: 600px) {
