--- a/styleoo.css
+++ b/styleoo.css
@@ -86,6 +86,7 @@ button[type=button]:hover {
   font-family: "Khalid", serif;
   font-weight: bold;
   font-size: 16px;
+  margin-bottom: 10px;
 }
 
 @font-face {
