--- a/styleoo.css
+++ b/styleoo.css
@@ -76,7 +76,7 @@ button[type=button]:hover {
   margin-bottom: 20px;
   display: 0;
   text-align: center;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 4px;
   padding: 10px;
 }
