--- a/styleoo.css
+++ b/styleoo.css
@@ -66,6 +66,7 @@ button[type=button] {
   border-radius: 4px;
   cursor: pointer;
   margin-bottom: 10px;
+  font-size: 18px !important;
 }
 
 button[type=button]:hover {
